ZON-3047: Fix missing margin

--- a/sass/web.campus/modules/teaser/_teaser-follow-us.sass
+++ b/sass/web.campus/modules/teaser/_teaser-follow-us.sass
@@ -61,8 +61,10 @@
 
 .abo-cta
 	@extend %border-box
+	margin-bottom: $gutter
 	padding: 2em 1em
 	+respond-min($break-tablet-min)
+		margin-bottom: 0
 		padding: 1.8em 1em
 	+respond-min($break-desktop-min)
 		padding: 2.2em 1em
